# CCF-BDCI-2019-Database

./: .gitignore  BDCI19.sln  BDCI19.vcxproj  BDCI19.vcxproj.filters  CMakeLists.txt  Makefile  README  README.md  common.h  compile.sh  create_submit.sh  launch.sh  main.cpp  run.sh
data/: README.md
docs/: SYSTEM_CONFIGURE.md
references/: P100-spec.md
sourcecode/: CMakeLists.txt  common.h  config.h  create_index.cpp  date.h  done_event.h  index_access.h  macros.h  main.cpp  mapper.h  naive_use_index.cpp  queue.h  spin_lock.h  sync_barrier.h  use_index.cpp
src/: Makefile  common.h  config.h  create_index.cpp  date.h  done_event.h  fs.h  futex.h  load_files.cpp  macros.h  main.cpp  mapper.h  mm.h  naive_use_index.cpp  queue.h  sem.h  spin_lock.h  str.h  sync_barrier.h  use_index.cpp
src/debug/: debug_preload.cpp  debug_sysv_perf.cpp
test/: .gitignore  _generate_final_query.py  _generate_huge_query.py  _generate_random_query.py  _run_all.sh  _run_all_huge.sh  _run_all_random.sh  all_automobile_1  all_automobile_1.result  all_automobile_100  all_automobile_20  allitems_query_100  allitems_query_5  allitems_query_5.result  bad_mktsegment_3  bad_mktsegment_3.result  bad_mktsegment_6  bad_mktsegment_6.result  case_fix_1  case_fix_1.result  case_fix_1.stdout2  case_fix_2  case_fix_2.result  case_fix_3  case_fix_3.result  empty_result_query_0  empty_result_query_1  empty_result_query_1.result  final_seed_10000_query_947  huge_seed_10000_query_395  huge_seed_10001_query_282  huge_seed_10002_query_299  huge_seed_10003_query_203  huge_seed_10004_query_410  huge_seed_10005_query_372  huge_seed_10006_query_221  huge_seed_10007_query_231  huge_seed_10008_query_174  huge_seed_10009_query_263  official_example  (+33 more)
